--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -61,42 +61,84 @@
     </footer>
 
     <!-- Login Modal -->
-    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="loginModalLabel">Login</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    {% with form=login_form %}
-                        {% include "login_modal.html" %}
-                    {% endwith %}
-                </div>
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="loginModalLabel">Login</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form method="POST" action="/login">
+                    <input type="hidden" name="csrf_token" value="IjMwMjc3YTQyZTE5ZTQ0MDk3MzE0YTg4ZjZlYTI0ZTRkOWI3ZGFkNjMi.ZtC08g.xkbIMNGoPaWuZnOwTt6QqQLSclA">
+                    
+                    <div class="form-group">
+                        <label class="form-label" for="emailInputLogin">Email</label>
+                        <input aria-describedby="emailHelpLogin" autocomplete="email" class="form-control" id="emailInputLogin" name="email" required type="text" value="">
+                        <small id="emailHelpLogin" class="form-text text-muted">Enter your registered email address.</small> <!-- Descriptive element added -->
+                    </div>
+                    
+                    <div class="form-group">
+                        <label class="form-label" for="passwordInputLogin">Password</label>
+                        <input autocomplete="current-password" class="form-control" id="passwordInputLogin" name="password" required type="password" value="">
+                    </div>
+                    
+                    <div class="form-group form-check">
+                        <input class="form-check-input" id="rememberMeLogin" name="remember" type="checkbox" value="y">
+                        <label class="form-check-label" for="rememberMeLogin">Remember Me</label>
+                    </div>
+                    
+                    <button type="submit" class="btn btn-primary">Login</button>
+                </form>
             </div>
         </div>
     </div>
+</div>
 
-    <!-- Register Modal -->
-    <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="registerModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="registerModalLabel">Register</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    {% with form=register_form %}
-                        {% include "register_modal.html" %}
-                    {% endwith %}
-                </div>
+<!-- Register Modal -->
+<div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="registerModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="registerModalLabel">Register</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form method="POST" action="/register">
+                    <input type="hidden" name="csrf_token" value="IjMwMjc3YTQyZTE5ZTQ0MDk3MzE0YTg4ZjZlYTI0ZTRkOWI3ZGFkNjMi.ZtC08g.xkbIMNGoPaWuZnOwTt6QqQLSclA">
+                    
+                    <div class="form-group">
+                        <label class="form-label" for="usernameInputRegister">Username</label>
+                        <input aria-describedby="usernameHelpRegister" autocomplete="username" class="form-control" id="usernameInputRegister" maxlength="20" minlength="2" name="username" required type="text" value="">
+                        <small id="usernameHelpRegister" class="form-text text-muted">Choose a unique username with at least 2 characters.</small> <!-- Descriptive element added -->
+                    </div>
+                    
+                    <div class="form-group">
+                        <label class="form-label" for="emailInputRegister">Email</label>
+                        <input aria-describedby="emailHelpRegister" autocomplete="email" class="form-control" id="emailInputRegister" name="email" required type="text" value="">
+                        <small id="emailHelpRegister" class="form-text text-muted">Enter a valid email address for registration.</small> <!-- Descriptive element added -->
+                    </div>
+                    
+                    <div class="form-group">
+                        <label class="form-label" for="passwordInputRegister">Password</label>
+                        <input autocomplete="new-password" class="form-control" id="passwordInputRegister" name="password" required type="password" value="">
+                    </div>
+                    
+                    <div class="form-group">
+                        <label class="form-label" for="confirmPasswordInputRegister">Confirm Password</label>
+                        <input autocomplete="new-password" class="form-control" id="confirmPasswordInputRegister" name="confirm_password" required type="password" value="">
+                    </div>
+                    
+                    <button type="submit" class="btn btn-primary">Register</button>
+                </form>
             </div>
         </div>
     </div>
+</div>
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
